--- a/app/src/main/res/layout/bindphone_layout.xml
+++ b/app/src/main/res/layout/bindphone_layout.xml
@@ -20,8 +20,7 @@
                 android:text="绑定手机号"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_30"
-                android:layout_marginLeft="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimen_20"/>
+                android:layout_marginLeft="@dimen/dimen_15"/>
 
             <ImageView
                 android:layout_width="wrap_content"
