--- a/app/src/main/res/layout/messagesetting_activity_layout.xml
+++ b/app/src/main/res/layout/messagesetting_activity_layout.xml
@@ -21,8 +21,7 @@
                 android:layout_height="wrap_content"
                 android:text="消息设置"
                 android:textSize="@dimen/text_size_30"
-                android:textColor="@color/black"
-                android:layout_marginTop="@dimen/dimen_20"/>
+                android:textColor="@color/black"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
