--- a/app/src/main/res/layout/perfectdata_layout.xml
+++ b/app/src/main/res/layout/perfectdata_layout.xml
@@ -19,8 +19,7 @@
                 android:text="完善资料"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_30"
-                android:layout_marginLeft="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimen_20"/>
+                android:layout_marginLeft="@dimen/dimen_15"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
