--- a/app/src/main/res/layout/vipcore_layout.xml
+++ b/app/src/main/res/layout/vipcore_layout.xml
@@ -20,8 +20,7 @@
                 android:text="会员中心"
                 android:textSize="@dimen/text_size_30"
                 android:textColor="@color/black"
-                android:layout_marginLeft="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimen_20" />
+                android:layout_marginLeft="@dimen/dimen_15" />
 
             <TextView
                 android:layout_width="wrap_content"
