--- a/app/src/main/res/layout/welcom_layout.xml
+++ b/app/src/main/res/layout/welcom_layout.xml
@@ -20,8 +20,7 @@
                 android:text="欢迎"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_30"
-                android:layout_marginLeft="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimen_20"/>
+                android:layout_marginLeft="@dimen/dimen_15"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
