优化聊天页面部分UI

--- a/app/src/main/res/layout/details_activity_layout.xml
+++ b/app/src/main/res/layout/details_activity_layout.xml
@@ -6,7 +6,7 @@
 
     <include
         android:id="@+id/tooble"
-        layout="@layout/toobar_layout"/>
+        layout="@layout/nim_toobar_layout"/>
 
     <LinearLayout
         android:id="@+id/ll_footer"
