--- a/app/src/main/res/layout/dynamic_activity_layout.xml
+++ b/app/src/main/res/layout/dynamic_activity_layout.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/toobar_layout"/>
+    <include layout="@layout/nim_toobar_layout"/>
 
     <TextView
         android:layout_width="wrap_content"
