--- a/app/src/main/res/layout/map_view_amap_layout.xml
+++ b/app/src/main/res/layout/map_view_amap_layout.xml
@@ -23,7 +23,7 @@
     <!--</android.support.v7.widget.Toolbar>-->
     <!--</android.support.design.widget.AppBarLayout>-->
 
-    <include layout="@layout/toobar_layout" />
+    <include layout="@layout/nim_toobar_layout" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
