--- a/app/src/main/res/layout/perfectdata_layout.xml
+++ b/app/src/main/res/layout/perfectdata_layout.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-    <include layout="@layout/toobar_layout"/>
+    <include layout="@layout/nim_toobar_layout"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
