优化聊天页面剩余部分UI

--- a/app/src/main/res/layout/map_view_amap_layout.xml
+++ b/app/src/main/res/layout/map_view_amap_layout.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/pin" />
+            android:src="@mipmap/pin" />
 
         <LinearLayout
             android:id="@+id/location_info"
