--- a/app/src/main/res/drawable/nim_message_item_right_selector.xml
+++ b/app/src/main/res/drawable/nim_message_item_right_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/msg_right_bg" android:state_pressed="true"/>
-    <item android:drawable="@drawable/msg_right_bg"/> <!-- default -->
+    <item android:drawable="@drawable/nim_message_left_white_bg" android:state_pressed="true"/>
+    <item android:drawable="@drawable/nim_message_left_white_bg"/> <!-- default -->
 
 </selector>
