--- a/uikit/res/layout/nim_message_activity_text_layout.xml
+++ b/uikit/res/layout/nim_message_activity_text_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textMessageLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/dp_size_50"
     android:background="@drawable/nim_message_view_bottom"
     android:paddingBottom="@dimen/bottom_component_margin_vertical"
     android:paddingTop="@dimen/bottom_component_margin_vertical">
@@ -10,8 +10,7 @@
     <FrameLayout
         android:id="@+id/switchLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editTextMessage"
+        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/bottom_component_margin_horizontal"
         android:layout_marginRight="@dimen/bottom_component_margin_horizontal">
 
@@ -21,12 +20,13 @@
             android:layout_height="wrap_content"
             android:background="@drawable/nim_message_button_bottom_audio_selector"
             android:contentDescription="@string/empty"
-            android:scaleType="center" />
+            android:scaleType="center"
+            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/buttonTextMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_size_27"
+            android:layout_height="@dimen/dp_size_27"
             android:layout_gravity="center_vertical"
             android:background="@drawable/nim_message_button_bottom_text_selector"
             android:contentDescription="@string/empty"
@@ -35,9 +35,9 @@
 
     <FrameLayout
         android:id="@+id/audioTextSwitchLayout"
-        android:layout_width="0dip"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/switchLayout"
+        android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/bottom_component_margin_horizontal"
         android:layout_toLeftOf="@+id/emoji_button"
         android:layout_toRightOf="@+id/switchLayout">
@@ -47,7 +47,7 @@
             android:id="@+id/audioRecord"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/nim_message_input_edittext_box"
+            android:background="@drawable/nim_edittext_bg_shape_bg"
             android:text="@string/record_audio"
             android:textColor="@color/color_black_333333"
             android:textSize="16sp"
@@ -64,36 +64,37 @@
         android:layout_toLeftOf="@+id/emoji_button"
         android:layout_toRightOf="@+id/switchLayout"
         android:autoLink="web|email|phone"
-        android:background="@drawable/nim_message_input_edittext_box"
+        android:background="@drawable/nim_edittext_bg_shape_bg"
         android:maxHeight="72dip"
         android:maxLines="4"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:padding="@dimen/dp_size_6"
+        android:layout_centerVertical="true"/>
 
     <ImageView
         android:id="@+id/emoji_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/audioTextSwitchLayout"
+        android:layout_height="match_parent"
         android:layout_marginRight="@dimen/bottom_component_margin_horizontal"
         android:layout_toLeftOf="@+id/sendLayout"
-        android:background="@drawable/nim_message_button_bottom_emoji_selector"
+        android:src="@drawable/nim_message_button_bottom_emoji_selector"
         android:contentDescription="@string/empty"
         android:scaleType="center" />
 
     <FrameLayout
         android:id="@+id/sendLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/audioTextSwitchLayout"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/bottom_component_margin_horizontal">
 
         <ImageView
             android:id="@+id/buttonMoreFuntionInText"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@drawable/nim_message_button_bottom_add_selector"
+            android:src="@drawable/nim_message_button_bottom_add_selector"
             android:contentDescription="@string/empty"
             android:scaleType="center" />
 
@@ -102,12 +103,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/nim_message_button_bottom_send_selector"
+            android:background="@drawable/round_theme"
             android:contentDescription="@string/empty"
             android:gravity="center"
             android:text="@string/send"
             android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:padding="@dimen/dp_size_5"/>
     </FrameLayout>
 
 </RelativeLayout>
