--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,32 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <!-- 红色toobar主题 -->
+    <style name="RedTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/redpackageColor</item>
+        <item name="colorPrimaryDark">@color/redpackageColor</item>
+        <item name="colorAccent">@color/redpackageColor</item>
+        <item name="android:textColorPrimary">@color/redpackageColor</item>
+        <item name="android:windowBackground">@color/redpackageColor</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <!-- _3d3d3d_color      toobar主题 -->
+    <style name="CurrencyTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/_3d3d3d_color</item>
+        <item name="colorPrimaryDark">@color/_3d3d3d_color</item>
+        <item name="colorAccent">@color/_3d3d3d_color</item>
+        <item name="android:textColorPrimary">@color/_3d3d3d_color</item>
+        <item name="android:windowBackground">@color/_3d3d3d_color</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
     <style name="grid_view" parent="@android:style/Widget.GridView">
         <item name="android:scrollbarThumbVertical">@drawable/nim_scrollbar_handle_holo_dark</item>
         <item name="android:scrollbarThumbHorizontal">@drawable/nim_scrollbar_handle_holo_dark</item>
