--- a/app/src/main/res/layout/dynamic_grid_item_layout.xml
+++ b/app/src/main/res/layout/dynamic_grid_item_layout.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/dimen_5">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="@dimen/my_item_height_62"
+    android:layout_height="@dimen/my_item_height_62">
 
-    <ImageView
+    <com.netease.nim.uikit.common.ui.imageview.HeadImageView
         android:id="@+id/img_dynamic"
         android:layout_width="@dimen/my_item_height_62"
         android:layout_height="@dimen/my_item_height_62"
-        android:src="@mipmap/zhanwei_logo"/>
+        android:src="@mipmap/zhanwei_logo"
+        android:layout_margin="@dimen/dimen_5"/>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/img_deletePictures"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/deletepictures_logo"
+        android:layout_alignParentRight="true"
+        android:padding="@dimen/dimen_5"
+        android:visibility="gone"/>
+
+</RelativeLayout>
