--- a/app/src/main/res/layout/attach_pay_select.xml
+++ b/app/src/main/res/layout/attach_pay_select.xml
@@ -74,8 +74,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:paddingBottom="13dp"
-            android:gravity="center"
-            android:visibility="gone">
+            android:gravity="center">
 
             <ImageView
                 android:layout_width="30dp"
@@ -121,8 +120,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginLeft="54dp"
-            android:background="@color/activity_grey_bg"
-            android:visibility="gone" />
+            android:background="@color/activity_grey_bg" />
 
         <LinearLayout
             android:id="@+id/wchat_btn"
@@ -201,7 +199,7 @@
                 android:layout_width="@dimen/dimen_20"
                 android:layout_height="@dimen/dimen_20"
                 android:layout_marginRight="18dp"
-                android:src="@mipmap/unselected_logo" />
+                android:src="@mipmap/selected_logo" />
         </LinearLayout>
 
         <View
