--- a/uikit/res/layout/nim_recent_contacts.xml
+++ b/uikit/res/layout/nim_recent_contacts.xml
@@ -20,7 +20,9 @@
         android:layout_marginBottom="@dimen/dp_size_50"
         android:contentDescription="@string/empty"
         android:drawableTop="@drawable/nim_messages_list_empty_bg"
+        android:drawablePadding="@dimen/dp_size_32"
         android:lineSpacingExtra="@dimen/dp_size_5"
-        android:text="还没有会话，在通讯录中找个人聊聊吧！"/>
+        android:text="暂时没有此类消息"
+        android:gravity="center"/>
 
 </FrameLayout>
