--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -146,6 +146,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="@color/activity_grey_bg"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="钱包"
+                    android:textSize="@dimen/text_size_12"
+                    android:textColor="@color/black"
+                    android:paddingTop="@dimen/dimen_12"
+                    android:paddingBottom="@dimen/dimen_12"/>
+                <TextView
+                    android:id="@+id/tv_wallet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0.00元,99约会币"
+                    android:textSize="@dimen/text_size_12"
+                    android:textColor="@color/color_999999"
+                    android:paddingTop="@dimen/dimen_12"
+                    android:paddingBottom="@dimen/dimen_12"
+                    android:drawableRight="@mipmap/right_jiantou_logo"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:layout_alignParentRight="true"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/activity_grey_bg"/>
             <TextView
                 android:id="@+id/tv_PrivacySetting"
                 android:layout_width="match_parent"
