--- a/app/src/main/res/layout/bindphone_layout.xml
+++ b/app/src/main/res/layout/bindphone_layout.xml
@@ -53,6 +53,7 @@
                 android:layout_marginLeft="@dimen/dimen_15"
                 android:padding="@dimen/dimen_15"
                 android:background="@drawable/edittext_bg_shape_bg"
+                android:numeric="integer"
                 android:hint="请输入手机号"
                 android:textColorHint="@color/edit_hint_color"
                 android:textSize="@dimen/text_size_15"
@@ -89,6 +90,7 @@
                 android:layout_marginLeft="@dimen/dimen_15"
                 android:padding="@dimen/dimen_15"
                 android:background="@drawable/edittext_bg_shape_bg"
+                android:numeric="integer"
                 android:hint="请输入验证码"
                 android:textColorHint="@color/edit_hint_color"
                 android:textSize="@dimen/text_size_15"
@@ -112,6 +114,7 @@
                 android:layout_marginLeft="@dimen/dimen_15"
                 android:padding="@dimen/dimen_15"
                 android:background="@drawable/edittext_bg_shape_bg"
+                android:inputType="textPassword"
                 android:hint="请输入密码"
                 android:textColorHint="@color/edit_hint_color"
                 android:textSize="@dimen/text_size_15"
