--- a/app/src/main/res/layout/forgetpassword_layout.xml
+++ b/app/src/main/res/layout/forgetpassword_layout.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="注册"
+        android:text="忘记密码"
         android:textSize="@dimen/text_size_30"
         android:textColor="@color/black"
         android:paddingLeft="@dimen/dimen_15"
@@ -40,9 +40,9 @@
                 android:id="@+id/et_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:numeric="integer"
                 android:layout_marginLeft="@dimen/dimen_70"
                 android:background="@color/white"
-                android:numeric="integer"
                 android:hint="请输入手机号"
                 android:textSize="@dimen/text_size_15"
                 android:textColor="@color/black"
@@ -79,9 +79,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dimen_70"
+                android:numeric="integer"
                 android:background="@color/white"
                 android:hint="请输入验证码"
-                android:numeric="integer"
                 android:textSize="@dimen/text_size_15"
                 android:textColor="@color/black"
                 android:textColorHint="@color/edit_hint_color"
@@ -111,8 +111,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dimen_70"
-                android:inputType="textPassword"
                 android:background="@color/white"
+                android:inputType="textPassword"
                 android:hint="请设置登录密码"
                 android:textSize="@dimen/text_size_15"
                 android:textColor="@color/black"
@@ -132,67 +132,8 @@
         android:layout_marginLeft="@dimen/dimen_20"
         android:layout_marginRight="@dimen/dimen_20"
         android:layout_marginTop="@dimen/dimen_20"
-        android:text="下一步"
+        android:text="确认修改"
         android:textSize="@dimen/text_size_15"
         android:textColor="@color/white"
         android:gravity="center"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dimen_20">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="点击进入表示你已经阅读并同意"
-            android:textSize="@dimen/text_size_12"
-            android:textColor="@color/black"
-            android:layout_marginRight="@dimen/dp_10"/>
-        <TextView
-            android:id="@+id/tv_Agreement"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="《用户协议》"
-            android:textSize="@dimen/text_size_12"
-            android:textColor="@color/theme_color"
-            android:layout_marginRight="@dimen/dp_10"/>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
-        <LinearLayout
-            android:id="@+id/ll_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/dimen_40">
-            <ImageView
-                android:id="@+id/img_weixin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/weixin_hui_logo"
-                android:paddingRight="@dimen/dp_10" />
-            <ImageView
-                android:id="@+id/img_qq"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/qq_hui_logo"
-                android:paddingLeft="@dimen/dp_10"/>
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="其他注册方式"
-            android:textSize="@dimen/text_size_12"
-            android:textColor="@color/color_gray_666666"
-            android:layout_above="@+id/ll_login"
-            android:layout_marginBottom="@dimen/dimen_20"
-            android:layout_centerHorizontal="true"/>
-    </RelativeLayout>
-
 </LinearLayout>
