--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -67,6 +67,7 @@
         android:layout_marginLeft="@dimen/dimen_15"
         android:padding="@dimen/dimen_15"
         android:background="@drawable/edittext_bg_shape_bg"
+        android:inputType="textPassword"
         android:hint="请输入密码"
         android:textColorHint="@color/edit_hint_color"
         android:textSize="@dimen/text_size_15"
