--- a/app/src/main/res/layout/perfectdata_layout.xml
+++ b/app/src/main/res/layout/perfectdata_layout.xml
@@ -40,20 +40,33 @@
                 android:layout_height="72dp"
                 android:src="@mipmap/default_head_logo"
                 android:layout_marginLeft="@dimen/dimen_20"/>
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@mipmap/ziliao_logo"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
-                android:paddingRight="8dp"
-                android:text="基本信息"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_9"
-                android:gravity="right"
-                android:layout_marginLeft="20dp"
+                android:orientation="horizontal"
                 android:layout_marginTop="@dimen/dimen_20"
-                android:layout_marginBottom="@dimen/dimen_15"/>
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginBottom="@dimen/dimen_15"
+                android:gravity="center_vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/ziliao_logo"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:paddingRight="8dp"
+                    android:text="基本信息"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_9"
+                    android:gravity="right"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_15"
+                    android:text="(必填)"
+                    android:textColor="@color/color_gray_999999"
+                    android:textSize="@dimen/text_size_12"/>
+            </LinearLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -139,6 +152,62 @@
                 android:layout_marginTop="@dimen/dimen_15"
                 android:layout_marginLeft="@dimen/dimen_20"
                 android:layout_marginRight="@dimen/dimen_20"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"
+                android:layout_marginTop="@dimen/dimen_15">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="职业"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_15"/>
+                <TextView
+                    android:id="@+id/tv_Occupation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_70"
+                    android:text="请选择"
+                    android:textSize="@dimen/text_size_15"
+                    android:textColor="@color/edit_hint_color"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/activity_grey_bg"
+                android:layout_marginTop="@dimen/dimen_15"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"
+                android:layout_marginTop="@dimen/dimen_15">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="期望对象"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_15"/>
+                <TextView
+                    android:id="@+id/tv_Expect"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_70"
+                    android:text="请选择"
+                    android:textSize="@dimen/text_size_15"
+                    android:textColor="@color/edit_hint_color"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/activity_grey_bg"
+                android:layout_marginTop="@dimen/dimen_15"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -153,7 +222,7 @@
                     android:paddingTop="3dp"
                     android:paddingBottom="3dp"
                     android:paddingRight="8dp"
-                    android:text="基本信息"
+                    android:text="社交账号"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_size_9"
                     android:gravity="right"/>
@@ -243,6 +312,117 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:background="@mipmap/isshow_open"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/activity_grey_bg"
+                android:layout_marginTop="@dimen/dimen_15"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/dimen_20"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:gravity="center_vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/ziliao_logo"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="3dp"
+                    android:paddingRight="8dp"
+                    android:text="更多信息"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_9"
+                    android:gravity="right"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_15"
+                    android:text="(选填)"
+                    android:textColor="@color/color_gray_999999"
+                    android:textSize="@dimen/text_size_12"/>
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"
+                android:layout_marginTop="@dimen/dimen_15">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="身高"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_15"/>
+                <TextView
+                    android:id="@+id/tv_height"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_70"
+                    android:text="请选择"
+                    android:textSize="@dimen/text_size_15"
+                    android:textColor="@color/edit_hint_color"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/activity_grey_bg"
+                android:layout_marginTop="@dimen/dimen_15"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"
+                android:layout_marginTop="@dimen/dimen_15">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="体重"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_15"/>
+                <TextView
+                    android:id="@+id/tv_weight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_70"
+                    android:text="请选择"
+                    android:textSize="@dimen/text_size_15"
+                    android:textColor="@color/edit_hint_color"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/activity_grey_bg"
+                android:layout_marginTop="@dimen/dimen_15"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginRight="@dimen/dimen_20"
+                android:layout_marginTop="@dimen/dimen_15">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="个人介绍"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_15"/>
+                <EditText
+                    android:id="@+id/et_introduce"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_70"
+                    android:hint="介绍一下我自己"
+                    android:textSize="@dimen/text_size_15"
+                    android:textColor="@color/edit_hint_color"
+                    android:background="@color/white"/>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
