--- a/app/src/main/res/layout/seepicture_activity_layout.xml
+++ b/app/src/main/res/layout/seepicture_activity_layout.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:orientation="vertical">
+
+    <include layout="@layout/nim_toobar_layout"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/mViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-    <ImageView
-        android:id="@+id/img_more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/chat_more_icon"
-        android:layout_alignParentRight="true"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="@dimen/dimen_20"
-        android:paddingBottom="@dimen/dimen_20"/>
-
-</RelativeLayout>
+</LinearLayout>
