--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="color_gray_333333">#333333</color>
     <color name="color_gray_666666">#666666</color>
     <color name="color_gray_999999">#999999</color>
+    <color name="color_gray_touming">#b0787878</color>
     <color name="activity_grey_bg">#ECECEC</color>
     <color name="color_grey_EDEDED">#EDEDED</color>
     <color name="color_c9c9c9">#c9c9c9</color>
