--- a/app/src/main/res/layout/wallet_list_item_layout.xml
+++ b/app/src/main/res/layout/wallet_list_item_layout.xml
@@ -2,12 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="@dimen/dimen_15">
 
-    <com.netease.nim.uikit.common.ui.imageview.HeadImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/img_header"
         android:layout_width="@dimen/my_item_height_45"
         android:layout_height="@dimen/my_item_height_45"
+        app:riv_corner_radius="@dimen/dimen_5"
         android:src="@mipmap/default_home_head"/>
 
     <TextView
