--- a/app/src/main/res/layout/common_dialog.xml
+++ b/app/src/main/res/layout/common_dialog.xml
@@ -17,7 +17,8 @@
             android:layout_height="wrap_content"
 
             android:gravity="center"
-            android:textColor="@color/theme_color"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_18"
             android:layout_margin="10dp"
             android:id="@+id/tv_title"
             />
@@ -43,7 +44,8 @@
             android:textColor="@color/text_grey_color"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="40dp"
-
+            android:layout_marginLeft="@dimen/dimen_30"
+            android:layout_marginRight="@dimen/dimen_30"
             />
 
 
