修改引用了AndroidX错误包的问题; 优化分页加载时的下拉刷新Header和上拉加载

--- a/app/src/main/res/layout/blacklist_activity_layout.xml
+++ b/app/src/main/res/layout/blacklist_activity_layout.xml
@@ -15,7 +15,7 @@
         android:textColor="@color/black"
         android:layout_marginLeft="@dimen/dimen_15"/>
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+    <com.yqbj.yhgy.view.MyRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,7 +23,6 @@
             android:id="@+id/mRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+    </com.yqbj.yhgy.view.MyRefreshLayout>
 
 </LinearLayout>
