--- a/app/src/main/res/layout/dynamic_activity_layout.xml
+++ b/app/src/main/res/layout/dynamic_activity_layout.xml
@@ -15,7 +15,7 @@
         android:textSize="@dimen/text_size_30"
         android:layout_marginLeft="@dimen/dimen_15"/>
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+    <com.yqbj.yhgy.view.MyRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -25,7 +25,6 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dimen_15"
             android:layout_marginRight="@dimen/dimen_15"/>
-
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+    </com.yqbj.yhgy.view.MyRefreshLayout>
 
 </LinearLayout>
