--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,7 +101,7 @@
             android:drawablePadding="@dimen/dimen_5"/>
     </RelativeLayout>
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+    <com.yqbj.yhgy.view.MyRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -109,8 +109,6 @@
             android:id="@+id/home_mRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
+    </com.yqbj.yhgy.view.MyRefreshLayout>
 
 </LinearLayout>
