--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone">
-        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        <com.yqbj.yhgy.view.MyRefreshLayout
             android:id="@+id/refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -69,8 +69,7 @@
                 android:id="@+id/mRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-
-        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+        </com.yqbj.yhgy.view.MyRefreshLayout>
     </RelativeLayout>
 
     <LinearLayout
