--- a/avchatkit/src/main/res/layout/avchat_settings_layout.xml
+++ b/avchatkit/src/main/res/layout/avchat_settings_layout.xml
@@ -13,13 +13,13 @@
         android:theme="@style/AppTheme.AppBarOverlay"
         app:elevation="0dp">
 
-        <androidx.appcompat.widget.Toolbar
+        <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:titleTextAppearance="@style/Toolbar.TitleText">
-        </androidx.appcompat.widget.Toolbar>
+        </android.support.v7.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <fragment
