--- a/uikit/res/layout/nim_watch_picture_activity.xml
+++ b/uikit/res/layout/nim_watch_picture_activity.xml
@@ -37,7 +37,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/view_pager_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
