--- a/uikit/res/menu/nim_contacts_search_menu.xml
+++ b/uikit/res/menu/nim_contacts_search_menu.xml
@@ -9,6 +9,6 @@
         android:icon="@drawable/nim_actionbar_search_dark_icon"
         android:title="@string/search"
         app:showAsAction="always"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 
 </menu>
